--- a/_pages/about-single.html
+++ b/_pages/about-single.html
@@ -2,8 +2,8 @@
 title: "About"
 permalink: /about/
 layout: single
+author_profile: true
 ---
 
-## github webhosting
-
+<h2>github webhosting</h2>
 연습중입니다.
