--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /categories/
-title: "Category"
+title: "Posts by Category"
 author_profile: true
 ---
 {% include group-by-array collection=site.posts field="categories" %}
