--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,14 +1,16 @@
 ---
 layout: archive
 permalink: /categories/
-title: "Posts by Category"
+title: "Categories"
 author_profile: true
 ---
+<hr style="border: solid; color:gray;">
 {% include group-by-array collection=site.posts field="categories" %}
 {% for category in group_names %}
   {% assign posts = group_items[forloop.index0] %}
   <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
   {% for post in posts %}
-    {% include archive-single.html %}
+      {% include archive-single__category_tag.html %}
+      <hr>
   {% endfor %}
 {% endfor %}
