--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -1,9 +1,10 @@
 ---
 layout: archive
 permalink: /tags/
-title: "Posts by Tag"
+title: "Tags"
 author_profile: true
 ---
+<hr style="border: solid; color:gray;">
 {% include group-by-array collection=site.posts field="tags" %}
 <!--
 <ul>
@@ -22,6 +23,7 @@ author_profile: true
   {% assign posts = group_items[forloop.index0] %}
   <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
   {% for post in posts %}
-    {% include archive-single.html %}
+    {% include archive-single__category_tag.html %}
+    <hr>
   {% endfor %}
 {% endfor %}
