--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -9,8 +9,9 @@ author_profile: true
 {% for category in group_names %}
   {% assign posts = group_items[forloop.index0] %}
   <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
-  {% for post in posts %}
+  {% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
+  {% for post in sorted_posts %}
       {% include archive-single__category_tag.html %}
-      <hr>
+      <hr style = 'margin: 0.15em 0;'>
   {% endfor %}
 {% endfor %}
