--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -22,8 +22,9 @@ author_profile: true
 {% for tag in group_names %}
   {% assign posts = group_items[forloop.index0] %}
   <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
-  {% for post in posts %}
+  {% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
+  {% for post in sorted_posts %}
     {% include archive-single__category_tag.html %}
-    <hr>
+    <hr style = 'margin: 0.15em 0;'>
   {% endfor %}
 {% endfor %}
