--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -7,49 +7,50 @@ author_profile: true
 
 <!-- 카테고리, 태그 추가하기위해 패스 추가-->
 {% case site.category_archive.type %}
-  {% when "liquid" %}
-    {% assign path_type = "#" %}
-  {% when "jekyll-archives" %}
-    {% assign path_type = nil %}
+{% when "liquid" %}
+{% assign path_type = "#" %}
+{% when "jekyll-archives" %}
+{% assign path_type = nil %}
 {% endcase %}
 
 <!-- 카테고리 테이블 위한 변수 추가-->
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
-  {% if category[1].size > categories_max %}
-    {% assign categories_max = category[1].size %}
-  {% endif %}
+{% if category[1].size > categories_max %}
+{% assign categories_max = category[1].size %}
+{% endif %}
 {% endfor %}
 
-<hr style="border: solid; color:gray;">
-
-<!-- 카테고리 테이블 영역 -->
-<ul class="taxonomy__index">
-  {% for i in (1..categories_max) reversed %}
-    {% for category in site.categories %}
-      {% if category[1].size == i %}
+<div>
+    <hr style="border: solid; color:#454c53; margin: 0.5em 0">
+    <!-- 카테고리 테이블 영역 -->
+    <ul class="taxonomy__index" style="">
+        {% for i in (1..categories_max) reversed %}
+        {% for category in site.categories %}
+        {% if category[1].size == i %}
         <li>
-          <a href="#{{ category[0] | slugify }}">
-            <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
-          </a>
+            <a href="#{{ category[0] | slugify }}">
+                <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
+            </a>
         </li>
-      {% endif %}
-    {% endfor %}
-  {% endfor %}
-</ul>
+        {% endif %}
+        {% endfor %}
+        {% endfor %}
+    </ul>
+    <hr style="border: solid; color:#454c53; margin-bottom: 0px">
+</div>
 
 
 {% include group-by-array collection=site.posts field="categories" %}
 {% for category in group_names %}
-  {% assign posts = group_items[forloop.index0] %}
-  <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
-  {% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
-  {% for post in sorted_posts %}
-      {% include archive-single__category_tag.html %}
-      <hr style = 'margin: 0.15em 0;'>
-  {% endfor %}
-  <div class="page__meta" align = 'right' style = 'margin:0 '>
+{% assign posts = group_items[forloop.index0] %}
+<h2 class="archive__subtitle" id="{{ category | slugify }}">{{ category }}</h2>
+{% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
+{% for post in sorted_posts %}
+{% include archive-single__category_tag.html %}
+{% endfor %}
+<div align='right' class="page__meta" style='margin:0 '>
     <!-- <a href="{{ category | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}">위로</a> -->
     <a href="{{ path_type | prepend : site.category_archive.path | prepend : relative_url }}">위로</a>
-  </div>
+</div>
 {% endfor %}
