--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -20,11 +20,10 @@ author_profile: true
 <br/>
 -->
 {% for tag in group_names %}
-  {% assign posts = group_items[forloop.index0] %}
-  <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
-  {% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
-  {% for post in sorted_posts %}
-    {% include archive-single__category_tag.html %}
-    <hr style = 'margin: 0.15em 0;'>
-  {% endfor %}
+{% assign posts = group_items[forloop.index0] %}
+<h2 class="archive__subtitle" id="{{ tag | slugify }}">{{ tag }}</h2>
+{% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
+{% for post in sorted_posts %}
+{% include archive-single__category_tag.html %}
+{% endfor %}
 {% endfor %}
