--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -21,36 +21,37 @@ author_profile: true
 {% endif %}
 {% endfor %}
 
-<div>
-    <hr style="border: solid; color:#454c53; margin: 0.5em 0">
-    <!-- 카테고리 테이블 영역 -->
-    <ul class="taxonomy__index" style="">
-        {% for i in (1..categories_max) reversed %}
-        {% for category in site.categories %}
-        {% if category[1].size == i %}
-        <li>
-            <a href="#{{ category[0] | slugify }}">
-                <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>
-            </a>
-        </li>
-        {% endif %}
-        {% endfor %}
-        {% endfor %}
-    </ul>
-    <hr style="border: solid; color:#454c53; margin-bottom: 0px">
-</div>
+<!-- # 눌렀을때 컴포넌트를 제일 끝으로 올리는 이슈를 해결 못해서 상단에 sticky 네비게이터를 사용못함-->
+<!--<div style="background-color:#2c333b;position: sticky; position: -webkit-sticky; top: 0; z-index: 1000">-->
+<!--    <hr style="border: solid; color:#454c53; margin-bottom: 0">-->
+<!--    &lt;!&ndash; 카테고리 테이블 영역 &ndash;&gt;-->
+<!--    <ul class="taxonomy__index" style="margin: 0 1em">-->
+<!--        {% for i in (1..categories_max) reversed %}-->
+<!--        {% for category in site.categories %}-->
+<!--        {% if category[1].size == i %}-->
+<!--        <li>-->
+<!--            <a href="#{{ category[0] | slugify }}">-->
+<!--                <strong>{{ category[0] }}</strong> <span class="taxonomy__count">{{ i }}</span>-->
+<!--            </a>-->
+<!--        </li>-->
+<!--        {% endif %}-->
+<!--        {% endfor %}-->
+<!--        {% endfor %}-->
+<!--    </ul>-->
+<!--    <hr style="border: solid; color:#454c53; margin-top: 0px">-->
+<!--</div>-->
 
-
-{% include group-by-array collection=site.posts field="categories" %}
-{% for category in group_names %}
-{% assign posts = group_items[forloop.index0] %}
-<h2 class="archive__subtitle" id="{{ category | slugify }}">{{ category }}</h2>
-{% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
-{% for post in sorted_posts %}
-{% include archive-single__category_tag.html %}
-{% endfor %}
-<div align='right' class="page__meta" style='margin:0 '>
-    <!-- <a href="{{ category | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}">위로</a> -->
-    <a href="{{ path_type | prepend : site.category_archive.path | prepend : relative_url }}">위로</a>
+<div style="z-index: 0; margin: 0 1em">
+    {% include group-by-array collection=site.posts field="categories" %}
+    {% for category in group_names %}
+    {% assign posts = group_items[forloop.index0] %}
+    <h2 class="archive__subtitle" id="{{ category | slugify }}">{{ category }}</h2>
+    {% assign sorted_posts = posts | sort:"last_modified_at" | reverse%}
+    {% for post in sorted_posts %}
+    {% include archive-single__category_tag.html %}
+    {% endfor %}
+    <div align='right' class="page__meta" style='margin:0 '>
+        <!--        <a href="{{ path_type | prepend : site.category_archive.path | prepend : relative_url }}">위로</a>-->
+    </div>
+    {% endfor %}
 </div>
-{% endfor %}
